2017-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_image),
	* tp/Texinfo/Convert/IXIN.pm (output_ixin),
	* tp/Texinfo/Convert/HTML.pm (_convert_explained_command, output):
	Use 'args' array instead of 'brace_command_contents' array.

2017-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert)
	(_image_formatted_text, _image):
	Use 'args' array instead of 'brace_command_contents' array.

2017-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/TexinfoXML.pm (_convert): Check if array 
	elements are defined to avoid creating them accidentally.

2017-10-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/TexinfoXML.pm (_convert): Replace use
	of 'brace_command_contents' array in the 'extra' hash with
	the 'args' in the main tree.

2017-10-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_isolate_last_space): For 
	'brace_command_arg' only, save trailing spaces in 
	'spaces_after_argument' extra value instead of adding a 
	'spaces_at_end' element to the main tree.
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert),
	* tp/Texinfo/Convert/Texinfo.pm (_expand_cmd_args_to_texi):
	Update to look at 'spaces_after_argument' after an argument to
	a brace command.
	* tp/Texinfo/Convert/Converter.pm
	(_collect_leading_trailing_spaces_arg): Check for a
	'spaces_after_argument' record to find trailing spaces.

2017-10-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/TexinfoXML.pm (_leading_spaces_arg): Remove 
	unused.

2017-10-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/misc.c (xs_abort_empty_line): Update to
	match Perl implementation.
	* tp/Texinfo/Parser.pm (import): Re-enable XS overrides.

2017-10-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Rename reference to spaces 
	element from 'spaces_before_argument' to 'spaces_before_argument_elt'.