@@ -1,5 +1,10 @@
 2017-10-29  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/DocBook.pm (_convert):
+	Use 'args' array instead of 'brace_command_contents' array.
+
+2017-10-29  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Convert/Plaintext.pm (_image),
 	* tp/Texinfo/Convert/IXIN.pm (output_ixin),
 	* tp/Texinfo/Convert/HTML.pm (_convert_explained_command, output):
